--- a/clientportal.html
+++ b/clientportal.html
@@ -6,13 +6,17 @@
   <title>Client Portal</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
+<style> 
+body,h1 {font-family: "Raleway", sans-serif}
+</style>
+<body>
+  <body class="bgimg"></body>
   <header>
-    <div class="company-name">* Company</div>
     <a class="login-btn" href="index.html">Logout</a>
   </header>
-
+  <div id="greeting" style="position: fixed; top: 10px; right: 10px; font-weight: bold; font-family: Arial, sans-serif;">
+  </div>
   <main class="portal-container">
     <h2>Upcoming 3 Days</h2>
     <div id="days-container" class="days-container"></div>
@@ -27,6 +31,16 @@
   </main>
 
   <script>
+    const greetingDiv = document.getElementById('greeting');
+    const lastName = sessionStorage.getItem('lastName');
+
+    if (lastName) {
+      greetingDiv.textContent = `Hello ${lastName}`;
+    } else {
+      greetingDiv.textContent = ''; // or redirect to login if preferred
+    }
+
+
     const daysContainer = document.getElementById('days-container');
     const uploadSection = document.getElementById('upload-section');
     const selectedDayTitle = document.getElementById('selected-day-title');
@@ -67,7 +81,7 @@
     }
 
     // Handle form submit
-    photoForm.addEventListener('submit', (e) => {
+    photoForm.addEventListener('submit', async (e) => {
       e.preventDefault();
 
       const files = photoInput.files;
@@ -76,12 +90,44 @@
         return;
       }
 
-      alert(`Submitted ${files.length} photo(s) for ${formatDate(selectedDay)}`);
+      const clientId = sessionStorage.getItem('lastName'); // or however you store it
+      if (!clientId) {
+        alert('No client ID found. Please login again.');
+        return;
+      }
 
-      // Optionally, clear form and hide upload section
-      photoForm.reset();
-      uploadSection.style.display = 'none';
+      const date = formatFullDate(selectedDay); // 'YYYY-MM-DD'
+
+      async function getPresignedUrl(clientId, date, fileName) {
+        const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/upload', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ clientId, date, fileName })
+        });
+
+  if (!response.ok) {
+    throw new Error('Failed to get presigned URL');
+  }
+
+  const data = await response.json();
+  return data.uploadUrl; // This matches your Lambda response body
+}
+
+
+      try {
+        for (const file of files) {
+          const presignedUrl = await getPresignedUrl(clientId, date, file.name);
+        }
+
+        alert(`Successfully uploaded ${files.length} photo(s) for ${formatDate(selectedDay)}`);
+        photoForm.reset();
+        uploadSection.style.display = 'none';
+
+      } catch (error) {
+        alert('Upload failed: ' + error.message);
+      }
     });
+
   </script>
 
 </body>
