--- a/login.html
+++ b/login.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <title>Test</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body, h1 {
+      font-family: "Raleway", sans-serif;
+    }
+    body, html {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    .bgimg {
+      background-image: url('welcomescreen.jpg');
+      min-height: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+  </style>
 </head>
-<body>
+<body class="login-page">
 
-  <header>
-    <div class="company-name">* Company</div>
+  <p class="w3-large w3-center w3-display-bottomleft">
     <a class="login-btn" href="index.html">Back to Home</a>
-  </header>
+  </p>
 
   <main class="login-container">
     <form class="login-form" onsubmit="validateLogin(event)">
@@ -22,6 +39,51 @@
     </form>
   </main>
 
-  <script src="script.js"></script>
+  <script>
+    async function validateLogin(event) {
+  event.preventDefault();
+
+  const lastName = document.getElementById("lastName").value.trim();
+  const dob = document.getElementById("dob").value;
+
+  const loginData = { lastName, dob };
+
+  // Alert and log the JSON being sent
+  console.log("Request payload:", loginData);
+
+  try {
+    const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/login', 
+    {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(loginData),
+    });
+
+    if (!response.ok) {
+      throw new Error('Network response was not ok');
+    }
+
+    const apiResponse = await response.json();  // parse the whole Lambda response object
+    const result = JSON.parse(apiResponse.body); // parse the JSON string inside 'body'
+
+    if (result.success) {
+      sessionStorage.setItem('lastName', lastName);
+      sessionStorage.setItem('dob', dob);
+      window.location.href = "clientportal.html";
+    } else {
+      window.location.href = "invalidcredentials.html";
+    }
+
+  } catch (error) 
+  
+  {
+  console.error("Login error:", error);  // This logs the real error to browser console
+  alert("There was an error logging in. Please try again later.\n\n" + error.message);
+  }
+  
+}
+
+  </script>
+
 </body>
 </html>
