--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Client Portal</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your App Name</title>
+  <!-- iOS Fullscreen Web App Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="YourAppName">
+  <!-- Your CSS and other head stuff -->
+  <link rel="stylesheet" href="style.css" />
+<title>Lossless</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
@@ -18,18 +31,15 @@ body, html {height: 100%}
 </style>
 </head>
 <body>
-
   <script src="script.js"></script>
-
-
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Lossless
+    X
   </div>
   <div class="w3-display-middle">
-  <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+  <h1 class="w3-jumbo w3-animate-top">Loose and Lift</h1>
   <hr class="w3-border-grey" style="margin:auto; width:40%;">
-  <p class="w3-large w3-center">5 days left</p>
+  <p class="w3-large w3-center">COMING SOON</p>
   <!--<button onclick="sayHi()">Tap Me</button>-->
   <p class="w3-large w3-center">
     <a href="login.html">Login</a>
@@ -39,6 +49,5 @@ body, html {height: 100%}
     Powered by <a href="https://github.com" target="_blank">Test</a>
   </div>
 </div>
-
 </body>
 </html>
