--- a/clientportal.html
+++ b/clientportal.html
@@ -5,50 +5,156 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Client Portal</title>
   <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lossess</title>
+  <!-- iOS Fullscreen Web App Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="YourAppName">
+  <!-- Your CSS and other head stuff -->
+  <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+  		<title>Dimension by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+				<!-- Header -->
+					<header id="header">
+						<div class="content">
+							<div class="inner">
+								<h2 id="greeting">Welcome</h2>
+								<p>Log your food</p>
+							</div>
+						</div>
+						<nav>
+							<ul>
+								<li><a href="#breakfast">Breakfast</a></li>
+								<li><a href="#lunch">Lunch</a></li>
+								<li><a href="#dinner">Dinner</a></li>
+								<li><a href="#snacks">Snacks</a></li>
+								<!--<li><a href="#elements">Elements</a></li>-->
+							</ul>
+						</nav>
+					</header>
+				<!-- Main -->
+					<div id="main">
+						<!-- Breakfast -->
+							<article id="breakfast">
+              <h2 class="major">Breakfast</h2>
+              <input type="file" accept="image/*" id="photoUpload" style="margin-bottom: 10px;" />
+              <button onclick="handleUpload()">Upload Photo</button>
+              <div id="photoPreview" style="margin-top: 15px;">
+                <!-- Image will appear here -->
+              </div>
+            </article>
+						<!-- Lunch -->
+							<article id="lunch">
+              <h2 class="major">Lunch</h2>
+              <input type="file" accept="image/*" id="photoUpload" style="margin-bottom: 10px;" />
+              <button onclick="handleUpload()">Upload Photo</button>
+              <div id="photoPreview" style="margin-top: 15px;">
+                <!-- Image will appear here -->
+              </div>
+            </article>
+						<!-- Dinner -->
+							<article id="dinner">
+              <h2 class="major">Dinner</h2>
+              <input type="file" accept="image/*" id="photoUpload" style="margin-bottom: 10px;" />
+              <button onclick="handleUpload()">Upload Photo</button>
+              <div id="photoPreview" style="margin-top: 15px;">
+                <!-- Image will appear here -->
+              </div>
+            </article>
+						<!-- Snacks -->
+								<article id="snacks">
+              <h2 class="major">Snacks</h2>
+              <input type="file" accept="image/*" id="photoUpload" style="margin-bottom: 10px;" />
+              <button onclick="handleUpload()">Upload Photo</button>
+              <div id="photoPreview" style="margin-top: 15px;">
+                <!-- Image will appear here -->
+              </div>
+            </article>
+						<!-- Elements -->
+							<article id="elements">
+								<h2 class="major">Elements</h2>
 
+								<section>
+									<h3 class="major">Text</h3>
+									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+									<hr />
+									<h2>Heading Level 2</h2>
+									<h3>Heading Level 3</h3>
+									<h4>Heading Level 4</h4>
+									<h5>Heading Level 5</h5>
+									<h6>Heading Level 6</h6>
+									<hr />
+									<h4>Blockquote</h4>
+									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<h4>Preformatted</h4>
+								</section>
+							</article>
+					</div>
+        <!-- Dots -->
+          <div class="dot-container">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
+          <span id="currentTime">Loading time...</span>
+				<!-- Footer -->
+         <footer class="w3-display-bottommiddle w3-padding-large w3-center">
+          <a href="#" onclick="signOut()" class="w3-text-white">Sign Out</a>
+        </footer>
+
+			</div>
+		<!-- BG -->
+			<div id="bg"></div>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 <style> 
 body,h1 {font-family: "Raleway", sans-serif}
+  .dot-container {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
+    gap: 8px;
+  }
+  .dot {
+    width: 10px;
+    height: 10px;
+    background-color: #888;
+    border-radius: 50%;
+    display: inline-block;
+  }
 </style>
-<body>
-  <body class="bgimg"></body>
-  <header>
-    <a class="login-btn" href="index.html">Logout</a>
-  </header>
-  <div id="greeting" style="position: fixed; top: 10px; right: 10px; font-weight: bold; font-family: Arial, sans-serif;">
-  </div>
-  <main class="portal-container">
-    <h2>Upcoming 3 Days</h2>
-    <div id="days-container" class="days-container"></div>
-
-    <div id="upload-section" class="upload-section" style="display:none;">
-      <h3 id="selected-day-title"></h3>
-      <form id="photo-form">
-        <input type="file" id="photo-input" name="photos" accept="image/*" multiple required />
-        <button type="submit">Submit Photos</button>
-      </form>
-    </div>
-  </main>
-
+<!--JS-->
   <script>
     const greetingDiv = document.getElementById('greeting');
     const lastName = sessionStorage.getItem('lastName');
-
     if (lastName) {
-      greetingDiv.textContent = `Hello ${lastName}`;
-    } else {
-      greetingDiv.textContent = ''; // or redirect to login if preferred
+      document.getElementById('greeting').textContent = `Welcome, ${lastName}`;
     }
-
-
     const daysContainer = document.getElementById('days-container');
     const uploadSection = document.getElementById('upload-section');
     const selectedDayTitle = document.getElementById('selected-day-title');
     const photoForm = document.getElementById('photo-form');
     const photoInput = document.getElementById('photo-input');
-
     let selectedDay = null;
-
     function formatDate(date) {
       return date.toLocaleDateString(undefined, {
         weekday: 'short',
@@ -56,79 +162,75 @@ body,h1 {font-family: "Raleway", sans-serif}
         day: 'numeric'
       });
     }
-
+      function updateTime() {
+        const now = new Date();
+        const formatted = now.toLocaleTimeString();
+        document.getElementById('currentTime').textContent = `Current Time: ${formatted}`;
+      }
+  updateTime(); // initial call
+  setInterval(updateTime, 1000); // update every second
     function formatFullDate(date) {
       return date.toISOString().split('T')[0]; // YYYY-MM-DD for easier storage if needed
     }
-
-    // Create day blocks
-    for(let i = 0; i < 3; i++) {
-      const day = new Date();
-      day.setDate(day.getDate() + i);
-
-      const dayBlock = document.createElement('div');
-      dayBlock.className = 'day-block';
-      dayBlock.textContent = formatDate(day);
-
-      dayBlock.addEventListener('click', () => {
-        selectedDay = day;
-        selectedDayTitle.textContent = 'Upload photos for ' + formatDate(day);
-        uploadSection.style.display = 'block';
-        photoInput.value = ''; // reset input
-      });
-
-      daysContainer.appendChild(dayBlock);
-    }
-
+    // Photo Upload Button
+        function handleUpload() {
+          const fileInput = document.getElementById("photoUpload");
+          const previewDiv = document.getElementById("photoPreview");
+          if (fileInput.files.length === 0) {
+            alert("Please choose a photo first.");
+            return;
+          }
+          const file = fileInput.files[0];
+          const reader = new FileReader();
+          reader.onload = function (e) {
+            previewDiv.innerHTML = `
+              <p><strong>Time of Day:</strong> Breakfast</p>
+              <img src="${e.target.result}" alt="Uploaded photo" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 5px;" />
+            `;
+          };
+          reader.readAsDataURL(file);
+        }
     // Handle form submit
     photoForm.addEventListener('submit', async (e) => {
       e.preventDefault();
-
       const files = photoInput.files;
       if (!files.length) {
         alert('Please select at least one photo.');
         return;
       }
-
       const clientId = sessionStorage.getItem('lastName'); // or however you store it
       if (!clientId) {
         alert('No client ID found. Please login again.');
         return;
       }
-
       const date = formatFullDate(selectedDay); // 'YYYY-MM-DD'
-
       async function getPresignedUrl(clientId, date, fileName) {
         const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/upload', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ clientId, date, fileName })
         });
-
   if (!response.ok) {
     throw new Error('Failed to get presigned URL');
   }
-
   const data = await response.json();
   return data.uploadUrl; // This matches your Lambda response body
 }
-
-
       try {
         for (const file of files) {
           const presignedUrl = await getPresignedUrl(clientId, date, file.name);
         }
-
         alert(`Successfully uploaded ${files.length} photo(s) for ${formatDate(selectedDay)}`);
         photoForm.reset();
         uploadSection.style.display = 'none';
-
       } catch (error) {
         alert('Upload failed: ' + error.message);
       }
     });
-
+      function signOut() {
+    sessionStorage.clear(); // Delete all session data
+    window.location.href = "index.html"; // Redirect to home
+  }
   </script>
-
 </body>
 </html>
