--- a/login.html
+++ b/login.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Client Portal</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body, h1 {
-      font-family: "Raleway", sans-serif;
-    }
-    body, html {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    .bgimg {
-      background-image: url('welcomescreen.jpg');
-      min-height: 100%;
-      background-position: center;
-      background-size: cover;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your App Name</title>
+  <!-- iOS Fullscreen Web App Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="YourAppName">
+  <!-- Your CSS and other head stuff -->
+  <link rel="stylesheet" href="style.css" />
+<title>Lossess</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('welcomescreen.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
 </head>
-<body class="login-page">
-
-  <p class="w3-large w3-center w3-display-bottomleft">
-    <a class="login-btn" href="index.html">Back to Home</a>
-  </p>
-
+<body onload="redirectIfLoggedIn()">
   <main class="login-container">
     <form class="login-form" onsubmit="validateLogin(event)">
       <h2>Login</h2>
@@ -38,19 +39,22 @@
       <button type="submit">Login</button>
     </form>
   </main>
-
   <script>
+      function redirectIfLoggedIn() {
+      const lastName = sessionStorage.getItem("lastName");
+      const dob = sessionStorage.getItem("dob");
+      if (lastName && dob) {
+        // If session data exists, redirect to the portal
+        window.location.href = "clientportal.html";
+      }
+    }
     async function validateLogin(event) {
   event.preventDefault();
-
   const lastName = document.getElementById("lastName").value.trim();
   const dob = document.getElementById("dob").value;
-
   const loginData = { lastName, dob };
-
   // Alert and log the JSON being sent
   console.log("Request payload:", loginData);
-
   try {
     const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/login', 
     {
@@ -80,10 +84,27 @@
   console.error("Login error:", error);  // This logs the real error to browser console
   alert("There was an error logging in. Please try again later.\n\n" + error.message);
   }
-  
 }
-
   </script>
-
+<footer>   <p class="w3-large w3-center">
+  
+    <a href="index.html">Back to Home</a>
+  </p></footer>
 </body>
 </html>
+<style>
+  body, h1 {
+    font-family: "Raleway", sans-serif;
+  }
+  body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .bgimg {
+    background-image: url('images/bg.jpg');
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+</style>
