--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="YourAppName">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <!-- Your CSS and other head stuff -->
   <link rel="stylesheet" href="style.css" />
 <title>Lossless</title>
@@ -20,6 +21,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
+body {
+  padding-top: env(safe-area-inset-top);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
+  margin: 0;
+}
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
@@ -27,6 +35,11 @@ body, html {height: 100%}
   min-height: 100%;
   background-position: center;
   background-size: cover;
+}
+body, html {
+  background-color: black; /* or your app bg color */
+  height: 100%;
+  margin: 0;
 }
 </style>
 </head>
