--- a/login.html
+++ b/login.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lossess</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Client Portal</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your App Name</title>
+  <!-- iOS Fullscreen Web App Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="YourAppName">
   <!-- Your CSS and other head stuff -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
   <link rel="stylesheet" href="style.css" />
-  <!-- iOS Fullscreen Web App Meta Tags -->
+<title>Lossless</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body {
+  padding-top: env(safe-area-inset-top);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
+  margin: 0;
+}
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('welcomescreen.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+body, html {
+  background-color: black; /* or your app bg color */
+  height: 100%;
+  margin: 0;
+}
+</style>
 </head>
 <body onload="redirectIfLoggedIn()">
   <main class="login-container">
