--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="YourAppName">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <!-- Your CSS and other head stuff -->
   <link rel="stylesheet" href="style.css" />
 <title>Lossless</title>
@@ -21,6 +20,42 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
+  .clouds {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* so user can click through */
+  /* z-index: -1;  behind everything */
+  overflow: hidden;
+}
+
+.cloud {
+  position: absolute;
+  top: 20%; /* adjust for vertical position */
+  animation: moveClouds 60s linear infinite;
+  opacity: 0.6;
+}
+
+.cloud2 {
+  top: 40%;
+  width: 200px;
+}
+
+.cloud3 {
+  top: 100%;
+  width: 200px;
+}
+
+@keyframes moveClouds {
+  0% {
+    left: -300px;
+  }
+  100% {
+    left: 100%;
+  }
+}
 body {
   padding-top: env(safe-area-inset-top);
   padding-left: env(safe-area-inset-left);
@@ -46,11 +81,11 @@ body, html {
 <body>
   <script src="script.js"></script>
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    X
-  </div>
-  <div class="w3-display-middle">
-  <h1 class="w3-jumbo w3-animate-top">Loose and Lift</h1>
+<div class="w3-display-topleft w3-padding-large w3-xlarge">
+  L&L
+</div>
+<div class="w3-display-middle">
+  <h1 class="w3-jumbo w3-animate-top">Lift & Loose</h1>
   <hr class="w3-border-grey" style="margin:auto; width:40%;">
   <p class="w3-large w3-center">COMING SOON</p>
   <!--<button onclick="sayHi()">Tap Me</button>-->
@@ -58,9 +93,15 @@ body, html {
     <a href="login.html">Login</a>
   </p>
 </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://github.com" target="_blank">Test</a>
-  </div>
+<div class="w3-display-bottomleft w3-padding-large">
+  Powered by <a href="https://github.com" target="_blank">Test</a>
+</div>
+<!-- Clouds Animation -->
+<div class="clouds">
+  <img src="images/cloud1.jpg" class="cloud cloud1" alt="cloud" />
+  <img src="images/cloud1.jpg" class="cloud cloud2" alt="cloud" />
+  <img src="images/cloud1.jpg" class="cloud cloud3" alt="cloud" />
+</div>
 </div>
 </body>
 </html>
