--- a/login.html
+++ b/login.html
@@ -1,117 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Lossess</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Client Portal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" />
   <link rel="stylesheet" href="style.css" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your App Name</title>
-  <!-- iOS Fullscreen Web App Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="YourAppName">
-  <!-- Your CSS and other head stuff -->
-  <link rel="stylesheet" href="style.css" />
-<title>Lossless</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body {
-  padding-top: env(safe-area-inset-top);
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
-  padding-bottom: env(safe-area-inset-bottom);
-  margin: 0;
-}
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  background-image: url('welcomescreen.jpg');
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-body, html {
-  background-color: black; /* or your app bg color */
-  height: 100%;
-  margin: 0;
-}
-</style>
 </head>
 <body onload="redirectIfLoggedIn()">
   <main class="login-container">
     <form class="login-form" onsubmit="validateLogin(event)">
       <h2>Login</h2>
-      <input type="text" id="lastName" placeholder="Last Name" required />
-      <input type="date" id="dob" required />
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="pin" pattern="\d{4}" placeholder="4-digit PIN" required />
       <button type="submit">Login</button>
     </form>
   </main>
+
   <script>
-      function redirectIfLoggedIn() {
-      const lastName = sessionStorage.getItem("lastName");
-      const dob = sessionStorage.getItem("dob");
-      if (lastName && dob) {
-        // If session data exists, redirect to the portal
+    function redirectIfLoggedIn() {
+      const clientId = sessionStorage.getItem("clientId");
+      if (clientId === "admin") {
+        window.location.href = "adminportal.html";
+      } else if (clientId) {
         window.location.href = "clientportal.html";
       }
     }
     async function validateLogin(event) {
-  event.preventDefault();
-  const lastName = document.getElementById("lastName").value.trim();
-  const dob = document.getElementById("dob").value;
-  const loginData = { lastName, dob };
-  // Alert and log the JSON being sent
-  console.log("Request payload:", loginData);
-  try {
-    const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/login', 
-    {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(loginData),
-    });
-    if (!response.ok) {
-      throw new Error('Network response was not ok');
+      event.preventDefault();
+      const username = document.getElementById("username").value.trim();
+      const pin = document.getElementById("pin").value.trim();
+      const loginData = { username, pin };
+      try {
+        const response = await fetch('https://dcwa11ya30.execute-api.us-east-1.amazonaws.com/dev/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(loginData),
+        });
+        if (!response.ok) throw new Error('Network response was not ok');
+        const apiResponse = await response.json();
+        const result = JSON.parse(apiResponse.body);
+        if (result.success) {
+          sessionStorage.setItem('clientId', result.clientId);
+          sessionStorage.setItem('streamToken', result.streamToken);
+          sessionStorage.setItem('username', username);
+          if (result.clientId === "admin") {
+            window.location.href = "adminportal.html";
+          } else {
+            window.location.href = "clientportal.html";
+          }
+        } else {
+          window.location.href = "invalidcredentials.html";
+        }
+      } catch (error) {
+        console.error("Login error:", error);
+        alert("There was an error logging in. Please try again later.\n\n" + error.message);
+      }
     }
-    const apiResponse = await response.json();  // parse the whole Lambda response object
-    const result = JSON.parse(apiResponse.body); // parse the JSON string inside 'body'
-    if (result.success) {
-      sessionStorage.setItem('lastName', lastName);
-      sessionStorage.setItem('dob', dob);
-      window.location.href = "clientportal.html";
-    } else {
-      window.location.href = "invalidcredentials.html";
-    }
-  } catch (error) 
-  
-  {
-  console.error("Login error:", error);  // This logs the real error to browser console
-  alert("There was an error logging in. Please try again later.\n\n" + error.message);
-  }
-}
   </script>
-<footer>   <p class="w3-large w3-center">
-    <a href="index.html">Back to Home</a>
-  </p></footer>
+  <footer>
+    <p class="w3-large w3-center">
+      <a href="index.html">Back to Home</a>
+    </p>
+  </footer>
 </body>
 </html>
+
 <style>
-  body, h1 {
-    font-family: "Raleway", sans-serif;
-  }
-  body, html {
-    height: 100%;
+  body {
+    padding-top: env(safe-area-inset-top);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
     margin: 0;
-    padding: 0;
-  }
-  .bgimg {
+    font-family: "Raleway", sans-serif;
     background-image: url('images/bg.jpg');
-    min-height: 100%;
-    background-position: center;
     background-size: cover;
+    height: 100%;
+  }
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 2em;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 20px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  color: black; /* 👈 Make text black */
+  width: 90%;
+  max-width: 400px;
+}
+
+input {
+  padding: 0.5em;
+  font-size: 1em;
+  border: none;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.85);
+  color: black; /* 👈 Input text color black */
+}
+
+input::placeholder {
+  color: #333; /* 👈 Darker placeholder text */
+}
+
+button {
+  padding: 0.7em;
+  font-size: 1em;
+  background: #2196F3;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+button:hover {
+  background: #1e88e5;
+}
   }
 </style>
