--- a/clientportal.html
+++ b/clientportal.html
@@ -115,7 +115,7 @@
               <input type="range" min="0" max="100" value="50" />
               <p>your progress</p>
               </div>
-            <span id="currentTime">Loading time...</span> <!-- Current Time -->
+            <!-- <span id="currentTime">Loading time...</span> <!-- Current Time -->
           <footer class="w3-display-bottommiddle w3-padding-large w3-center"> <!-- Footer -->
             <h3 href="#" onclick="signOut()" class="w3-text-white">Sign Out</h3>
             <div id="client-id-display" style="
