--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body, html {
   L&L
 </div>
 <div class="w3-display-middle">
-  <h1 class="w3-jumbo w3-animate-top">Lift & Loose</h1>
+  <h1 class="w3-jumbo w3-animate-top">Lift & Lose</h1>
   <hr class="w3-border-grey" style="margin:auto; width:40%;">
   <p class="w3-large w3-center">COMING SOON</p>
   <!--<button onclick="sayHi()">Tap Me</button>-->
