--- a/clientportal.html
+++ b/clientportal.html
@@ -420,8 +420,12 @@ async function handleUpload() {
     if (userStatusData && userStatusData.body) {
       const innerBody = JSON.parse(userStatusData.body);
       if (innerBody.status) {
+        // Save the status array as a string in sessionStorage
         sessionStorage.setItem('status', JSON.stringify(innerBody.status));
         alert(`Status: ${innerBody.status.join(', ')}`);
+
+        // Pass the *string* or the original array (converted to string) to renderStatusDots
+        renderStatusDots(innerBody.status.join(''));
       }
     }
   } catch (err) {
